# jsd-mp

./: .drone.yml  .gitignore  Pipfile  README.md  mypy.ini  pyproject.toml  pyrightconfig.json  results.ipynb  simulation.ipynb
.github/workflows/: ci.yml  paper.yml
analysis/: FRAMING.md  README.md  SUMMARY.md  SWEEP.md  joint_vs_disjoint_corrected.py  sensitivity_sweep.py  summary.csv  sweep_capacity.csv  sweep_constraint.csv
config_example/: chains.yml  topology.yml  types.yml
domain/: nfv.py  topology.py
jsd-mp/config/: load.py
jsd-mp/domain/: __init__.py  direction.py  test_topology.py  topology.py
jsd_mp/: main.py
jsd_mp/abu/: abu.py  test_abu.py
jsd_mp/bari/: __init__.py  bari.py  placement.py  test_bari.py
jsd_mp/config/: config.py  load.py  test_load.py
jsd_mp/domain/: __init__.py  nfv.py  placement.py  test_nfv.py  test_placement.py  test_topology.py  topology.py  vnfm.py
jsd_mp/oabu/: __init__.py  oabu.py
jsd_mp/rari/: rari.py
jsd_mp/solver/: __init__.py  placement.py  random.py  solver.py  test_solver.py
paper/: .gitignore  Makefile  README.md  appendix.tex  appendix.typ  formulation.tex  formulation.typ  introduction.tex  introduction.typ  lib.typ  main.tex  main.typ  references.bib  related-works.tex  related-works.typ  results.tex  results.typ  solution.tex  solution.typ  system.tex  system.typ
results/: README.md  fattree-k-10-chains-40.csv  fattree-k-10-chains-60.csv
results/config-fattree-k-6/: topology.yml  vnfm.yml
results/config-usnet/: topology.yml  vnfm.yml
results/joint-vs-disjoint/: results.ipynb  runner.sh
results/report/: bari-vs-optimized-abut-without-reservation-with-k-6-200-chains.csv  bari-with-k-4-100-chains-with-tight-vnfm-restriction.csv  bari-with-k-4-100-chains-without-vnfm-restriction.csv  bari-with-k-6-130-chains.csv  bari-with-k-6-200-chains.csv  bari-with-k-6-80-chains.csv  main.ipynb  optimized-abu-vs-bari-with-k-6-200-chains.csv  optimized-abu-with-k-6-100-chains.csv  optimized-abu-with-k-6-110-chains.csv  optimized-abu-with-k-6-120-chains.csv  optimized-abu-with-k-6-130-chains.csv  optimized-abu-with-k-6-200-chains.csv  optimized-abu-with-k-6-80-chains.csv  optimized-abu-with-k-6-90-chains.csv  topology-k-6.yml  (+3 more)
simulation/: README.md
(+28 files in other folders)
