[tool.poetry]
name = "jsd-mp"
version = "0.1.0"
description = "Joint Service Deployment - Manager Placement"
authors = ["Parham Alvani <parham.alvani@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
