[project]
name = "jsd-mp"
version = "0.1.0"
description = "Joint Service Deployment - Manager Placement: heuristics for placing VNFs and their VNFMs together."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    { name = "Parham Alvani", email = "parham.alvani@gmail.com" },
    { name = "Bahador Bakhshi" },
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.scripts]
jsd-mp = "jsd_mp.main:main"

[project.urls]
Repository = "https://github.com/reinnet/jsd-mp"

# Dev/test tooling (PEP 735). Installed by `uv sync` by default.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "pylint>=3.0",
    "types-pyyaml>=6.0",
]
# Dependencies for the Jupyter notebooks and the analysis/ scripts.
notebook = [
    "ipykernel>=6.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "scipy>=1.11",
    "tabulate>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jsd_mp"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --cov=jsd_mp --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["jsd_mp"]
branch = true

[tool.coverage.report]
show_missing = true
